--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,38 @@ body{
  margin:0px;
  padding:0px;
 }
+.info{
+    width:90%;
+    height:310px;
+    background: #403e3e;
+    border-radius:20px;
+    box-shadow:2px 2px 12px rgba(0,0,0,0.2);
+    margin: -7%  auto 20px auto;
+    position: relative;
+    justify-content:space-evenly;
+    top:35%;
+}
+.text-container1{
+    float: left;
+    font-size:22;
+    font-family: Ink Free;
+    color: #FFE4B5;
+    
+}
+.fon{
+    font-size:25;
+    font-family: Georgia;
+    color: #ffffff;
+    padding-left: 95px;
+    padding-right: 300px;
+}
+.model1{
+    float: left;
+    font-size:22;
+    font-family: Ink Free;
+    color: #FFE4B5;
+    
+}
 ul{
  list-style:none;
 }
@@ -19,16 +51,30 @@ section{
  background-repeat:no-repeat;
  position: relative;
 }
+.imgall{
+    position: relative;
+    top:55%;
+    padding-left: 8%;
+}
 .help{
     width : 100%;
     height : 200px;
-    background-color: #ffffff;
     text-align: center;
     font-size: 35px;
     font-family: "Cooper Black";
     color: black;
     position: absolute;
     top:164%;
+}
+.help1{
+    width : 100%;
+    height : 130px;
+    text-align: center;
+    font-size: 35px;
+    font-family: "Cooper Black";
+    color: black;
+    position: absolute;
+    top:330%;
 }
 nav {
  display: flex;
@@ -75,11 +121,11 @@ nav ul li a{
  font-size:22px;
 }
 .text-container p:nth-child(2){
- font-family:calibri;
+ font-family: Algerian;
  font-weight:bold;
  letter-spacing:1px;
  color:#1a1a1a;
- font-size:60px;
+ font-size:40px;
  
 }
 .text-container p:nth-child(3){
@@ -260,7 +306,9 @@ font-size: 15px ;}
  align-items: center;
  margin: 0px 0px 20px 0px;
  position: relative;
- top:20%;
+ top:70%;
+ padding-bottom: 0px;
+ margin:0px;
 }
 .contact-me p{
  color:#FFFFFF;
@@ -268,6 +316,10 @@ font-size: 15px ;}
  font-family: calibri;
  font-weight:bold;
  text-align: center;
+}
+.contact-me p:nth-child(3){
+    font-family: Georgia;
+    font-size: 15px;
 }
 .contact-me button{
  width:150px;
@@ -278,92 +330,4 @@ font-size: 15px ;}
  font-size:14px;
  font-weight:bold;
  border-radius: 10px;
-}
-footer p{
- font-family: calibri;
-}
-footer p:nth-child(1){
- font-size: 27px;
- font-weight:bold;
- color:#191919;
- line-height:10px;
-}
-footer p:nth-child(2){
- font-size: 16px;
- color:#7e7d7d;
- width:600px;
- text-align: center;
-}
-footer{
- height:260px;
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- position: relative;
- padding-top: 0px;
- margin-top: 0px;
-}
-.social-icons a{
- width:40px;
- height:40px;
- display: flex;
- justify-content: center;
- align-items: center;
- background-color:#e6e3e3;
- margin:20px 10px;
- border-radius:50%;
-}
-.social-icons{
- display: flex;
- 
-}
-.social-icons i,.social i{
- color:#000000;
-}
-.social-icons a:hover{
- background-color:#000000;
- box-shadow:2px 2px 12px rgba(0,0,0,0.2);
- transition:all ease 0.5s;
-}
-.social-icons a:hover i,
-.social a:hover i{
- color:#FFFFFF;
- transition:all ease 0.5s;
-}
- 
-.copyright{
- color:#565555;
- font-size: 18px;
- position: absolute;
- left:50%;
- bottom:10px;
- transform: translateX(-50%);
-}
-.social{
- position: fixed;
- top:50%;
- right:0px;
- transform:translateY(-50%);
-}
-.social a{
- display: flex;
- justify-content: center;
- align-items: center;
- width:50px;
- height:50px;
- margin:0px;
- padding: 0px;
- line-height:0px;
- background-color:#FFFFFF;
- border:1px solid #CBCBCB;
- box-shadow:2px 2px 12px rgba(0,0,0,0.2);
-}
-.social a:hover{
- background-color:#000000;
- transition:all ease 0.5s;
-}
-.social i{
- font-size:20px;
- color:#2B2B2B;
 }
